# ida-keybinder

./: LICENSE  README.md  ida-plugin.json  keybinder.py  pyproject.toml  setup.py
.claude/skills/: ida-plugin-maker.md
.github/workflows/: release.yml
src/keybinder/: __init__.py  keybinder.py
