[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-keybinder"
version = "1.2.0"
description = "Emacs-like keybinding sequences for IDA Pro"
readme = "README.md"
authors = [
    {name = "Mahmoud Abdelkader"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "ida-settings>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mahmoudimus/ida-keybinder"
Repository = "https://github.com/mahmoudimus/ida-keybinder"
Issues = "https://github.com/mahmoudimus/ida-keybinder/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["keybinder*"]
